# plotly_mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
sample_data/: ecommerce_sales.csv  hr_employees.csv  sensor_readings.csv  website_metrics.csv
src/plotly_mcp/: __init__.py  auto_layout.py  charts.py  config.py  dashboard_server.py  data_utils.py  live_dashboard.py  server.py
tests/: test_auto_layout.py  test_charts.py  test_dashboard_server.py  test_data_utils.py  test_live_dashboard.py  test_server.py
