[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plotly-mcp"
version = "0.1.0"
description = "MCP server for generating Plotly charts via LLM tool calls"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "plotly>=5.18.0,<6",
    "kaleido==0.2.1",
    "pandas>=2.0.0",
]

[project.scripts]
plotly-mcp = "plotly_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/plotly_mcp"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
